支持执行invoke命令